--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ repository = "https://github.com/DmitriiPodgalo/Vagus"
 authors = ["Y. Burankova, A. Gorbonos, A. Tokareva, D. Podgalo"]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.9,<3.11"
 
 Jinja2 = "3.0.2"
 
@@ -15,7 +15,8 @@ typer = "^0"
 matplotlib = "3.5.0"
 scipy="1.7.2"
 numpy="1.21.4"
-
+seaborn="0.11.2"
+pandas="1.3.4"
 
 [tool.poetry.scripts]
 xxx = "xxx.cli:main"
